assignments/assignment_18/p3/bruno/log-28
cd /var/www/html/Sharif-Judge/tester;
./tester.sh /var/www/html/Sharif-Judge/assignments/assignment_18/p3 'bruno' '1' '1-28' cpp 0.5 1 50000 1048576 diff -bB 1 1 0 0 0 0 /var/www/html/Sharif-Judge/tester/static_analysis/ /var/www/html/Sharif-Judge/assignments/assignment_18/p3/inject/static_analysis_template/ 0             
Starting tester...
Static Analysis: false
ter dez 17 23:46:18 -03 2019
Language: cpp
Time Limit: 0.5 s
Memory Limit: 50000 kB
Output size limit: 1048576 bytes
EasySandbox: true
C/C++ Shield: false
Compiling as cpp
Enabling EasySandbox
EasySandbox is not built. Disabling EasySandbox...
Compiled. Exit Code=1  Execution Time: 4725 ms
Compile Error
EixoDinamico.cpp: In constructor ‘EixoDinamico::EixoDinamico(double, double, Serie*, bool)’:
EixoDinamico.cpp:15:20: error: ‘class Serie’ has no member named ‘Pontos’; did you mean ‘pontos’?
             (base->Pontos[0]->getX() !=  base->Pontos[1]->getX()) )
                    ^~~~~~
                    pontos
compilation terminated due to -Wfatal-errors.
Grafico.cpp: In member function ‘void Grafico::desenhar()’:
Grafico.cpp:32:27: error: ‘class Serie’ has no member named ‘Quantidade’; did you mean ‘quantidade’?
     for(i = 0; i < serie->Quantidade; i++){
                           ^~~~~~~~~~

Total Execution Time: 4798 ms
